--- a/portfolio.html
+++ b/portfolio.html
@@ -35,64 +35,64 @@
     </header>
 
     <main>
-        <section class="portfolio"></section>
-        <h1>Portfolio</h1>
+        <section class="portfolio">
+            <h1>Portfolio</h1>
 
-        <div class="filters">
-            <button type="button" class="button primary">Все</button>
-            <button type="button" class="button">Маркетинг</button>
-            <button type="button" class="button">Веб-сайты</button>
-            <button type="button" class="button">Приложения</button>
-            <button type="button" class="button">Дизайн</button>
-        </div>
+            <div class="filters">
+                <button type="button" class="button primary">Все</button>
+                <button type="button" class="button">Маркетинг</button>
+                <button type="button" class="button">Веб-сайты</button>
+                <button type="button" class="button">Приложения</button>
+                <button type="button" class="button">Дизайн</button>
+            </div>
 
-        <ul class="list">
-            <li>
-                <img src="./images/portfolio1.jpg" alt="Ноутбук" width="370">
-                <h2 class="title">Технокряк</h2>
-                <p class="text">Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/portfolio2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                <p class="text">Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/portfolio3.jpg" alt="Логотип Ресторан Seafood" width="370">
-                <h2 class="title">Ресторан Seafood</h2>
-                <p class="text">Приложение</p>
-            </li>
-            <li>
-                <img src="./images/portfolio4.jpg" alt="Наушники" width="370">
-                <h2 class="title">Проект Prime</h2>
-                <p class="text">Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/portfolio5.jpg" alt="Проект Boxes" width="370">
-                <h2 class="title">Проект Boxes</h2>
-                <p class="text">Приложение</p>
-            </li>
-            <li>
-                <img src="./images/portfolio6.jpg" alt="Монитор" width="370">
-                <h2 class="title">Inspiration has no Borders</h2>
-                <p class="text">Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/portfolio7.jpg" alt="Книга" width="370">
-                <h2 class="title">Издание Limited Edition</h2>
-                <p class="text">Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/portfolio8.jpg" alt="Логотип Проект Boxes" width="370">
-                <h2 class="title">Проект LAB</h2>
-                <p class="text">Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/portfolio9.jpg" alt="Работа за ноутбуком" width="370">
-                <h2 class="title">Growing Business</h2>
-                <p class="text">Приложение</p>
-            </li>
-        </ul>
+            <ul class="list">
+                <li>
+                    <img src="./images/portfolio1.jpg" alt="Ноутбук" width="370">
+                    <h2 class="title">Технокряк</h2>
+                    <p class="text">Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                    <p class="text">Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio3.jpg" alt="Логотип Ресторан Seafood" width="370">
+                    <h2 class="title">Ресторан Seafood</h2>
+                    <p class="text">Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio4.jpg" alt="Наушники" width="370">
+                    <h2 class="title">Проект Prime</h2>
+                    <p class="text">Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio5.jpg" alt="Проект Boxes" width="370">
+                    <h2 class="title">Проект Boxes</h2>
+                    <p class="text">Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio6.jpg" alt="Монитор" width="370">
+                    <h2 class="title">Inspiration has no Borders</h2>
+                    <p class="text">Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio7.jpg" alt="Книга" width="370">
+                    <h2 class="title">Издание Limited Edition</h2>
+                    <p class="text">Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio8.jpg" alt="Логотип Проект Boxes" width="370">
+                    <h2 class="title">Проект LAB</h2>
+                    <p class="text">Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio9.jpg" alt="Работа за ноутбуком" width="370">
+                    <h2 class="title">Growing Business</h2>
+                    <p class="text">Приложение</p>
+                </li>
+            </ul>
         </section>
     </main>
 
