1. for logo (header & footer) & link "studio"  add path 2.  Remove italics from footer text

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
   <header>
     <nav>
-      <a class="logo-header" href=""><span class="logo-color">Web</span>Studio</a>
+      <a class="logo-header" href="./index.html"><span class="logo-color">Web</span>Studio</a>
 
       <ul class="site-nav list">
-        <li><a class="link current" href="">Студия</a></li>
+        <li><a class="link current" href="./index.html">Студия</a></li>
         <li><a class="link" href="./portfolio.html">Портфолио</a></li>
         <li><a class="link" href="">Контакты</a></li>
       </ul>
@@ -120,7 +120,7 @@
   </main>
 
   <footer>
-    <a class="logo-footer" href=""><span class="logo-color">Web</span>Studio</a>
+    <a class="logo-footer" href="./index.html"><span class="logo-color">Web</span>Studio</a>
 
     <address>
       <p class="office">г. Киев, пр-т Леси Украинки, 26</p>
